# RustAnt

./: .gitignore  Cargo.toml  README.md  bubble_sort_test.ant
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 新增功能请求.md
.github/workflows/: rust.yml
bug_of_ant/parser/: if.ant
bug_of_ant/vm/module/: a.ant  b.ant  c.ant
bug_of_ant/vm/native_module/: a.ant  b.ant
src/: constants.rs  lib.rs  main.rs  type_defs.rs  utils.rs
src/arg_structure/: arg_structure.rs  mod.rs
src/ast/: ast.rs  constants.rs  expr.rs  mod.rs  stmt.rs  test.rs  utils.rs
src/builtin/: builtin_func.rs  builtin_map.rs  mod.rs  native_to_call_api.rs
src/byte_code_vm/: constants.rs  mod.rs  run.rs  scope_info.rs  test.rs  utils.rs
src/char_string/: char_string.rs  mod.rs
src/environment/: builtin_functions.rs  data.rs  data_info.rs  environment.rs  mod.rs  test.rs  utils.rs
src/evaluator/: evaluator.rs  mod.rs  test.rs  utils.rs
src/function_caller/: function_caller.rs  mod.rs  test.rs
src/gc/: gc.rs  mod.rs  test.rs
src/lexer/: lexer.rs  test.rs
src/lg_ir_gen/: converter.rs  mod.rs  test.rs
src/map/: map.rs  mod.rs  pair.rs
src/module_importer/: ant_module_importer.rs  importer_enum.rs  mod.rs  native_module_importer.rs
src/module_system/: import_module.rs  mod.rs  test.rs  test_module.ant
src/obj_enum/: object.rs
src/object/: ant_array.rs  ant_boolean.rs  ant_class.rs  ant_closure.rs  ant_compiled_function.rs  ant_double.rs  ant_env.rs  ant_error.rs  ant_function.rs  ant_hash_map.rs  ant_i64.rs  ant_int.rs  ant_method.rs  ant_native_function.rs  ant_none.rs  ant_null.rs  ant_return_value.rs  ant_string.rs  ant_uninit.rs  function_enum.rs  id_counter.rs  mod.rs  object.rs  object_macro.rs  test.rs  type_hint.rs  utils.rs
src/parser/: mod.rs  parser.rs  precedence.rs  test.rs  utils.rs
src/runner/: eval.rs  file_runner.rs  mod.rs  repl_runner.rs  utils.rs
src/token/: mod.rs  token.rs  token_type.rs  utils.rs
std/: option.ant  result.ant
test_code/: run_all.py  sort_demo.ant  铁傀儡机.ant
test_code/AntAnt/: lexer.ant  repl.ant  token.ant
test_code/benchmarks/: benchmark_fib.ant  benchmark_fib_i64.ant  benchmark_test_gc.ant
test_code/core_feature/: closure_test.ant  for_each.ant  int_double_interop_test.ant  mod1.ant  multi_if_test.ant  test_import.ant
test_code/oop/: object_member_test.ant  self_test.ant
(+119 files in other folders)
