[package]
name = "rust_ant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
phf = { version = "0.11.3", features = ["macros"] }
num-bigint = "0.4"
bigdecimal = "0.4.8"
dyn-clone = "1.0"
lazy_static = "1.4.0"
num_enum = "0.7.3"
unicode-properties = "0.1.3"
colored = "3.0.0"
lg-rust-binding = { git = "https://github.com/xiaoli-white/lg-rust-binding.git", branch = "master" }
indexmap = "2.0"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
# debug = true

[features]
byte_code_rust_ant = []
get_code_run_seconds = []