[package]
name = "rust_ant"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
phf = { version = "0.11.3", features = ["macros"] }
bigdecimal = "=0.4.7"
dyn-clone = "1.0.20"
lazy_static = "1.4.0"
num_enum = "0.7.3"
unicode-properties = "0.1.3"
colored = "3.0.0"
indexmap = "2.11.4"
byteorder = "1.4"
hashbrown = "0.16.0"
once_cell = "1.19"
num-traits = "0.2.19"
enum_dispatch = "0.3.13"
libloading = "0.8.9"
global_env = { git = "https://github.com/LKBaka/global_env.git" }
wasm-bindgen = "0.2.104"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.81", features = ["console"] }

[profile.dev]
opt-level = 0
debug = "full"
# lto = true

[profile.release]
lto = true

[features]
get_code_run_seconds = []
debug = []
